--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,8 +1,9 @@
 fixtures:
   repositories:
-    stdlib: "https://github.com/puppetlabs/puppetlabs-stdlib.git"
     apt: "https://github.com/puppetlabs/puppetlabs-apt.git"
+    concat: "https://github.com/syseleven/puppetlabs-concat.git"
     docker: "https://github.com/puppetlabs/puppetlabs-docker.git"
+    stdlib: "https://github.com/puppetlabs/puppetlabs-stdlib.git"
     yumrepo_core:
       repo: https://github.com/puppetlabs/puppetlabs-yumrepo_core.git
       puppet_version: ">= 6.0.0"
