--- a/.sync.yml
+++ b/.sync.yml
@@ -18,3 +18,6 @@ Gemfile:
   optional:
     ':test':
       - gem: 'webmock'
+spec/spec_helper.rb:
+  spec_overrides:
+  - require 'spec_helper_local'
