Move runner configuration from exec to concat::fragment
This uses the foundation laid in
9ff7b039583df596c3d15fea2e62003de5890fdc and moves the runner
configuration from execs to concat::fragments. This was done to be able
to change (parts) of the runner configuration after the inital Puppet
run which is not possible with the exec because there is no config
update logic in the gitlab-runner binary.

Sadly this drops the support for autoregistering a runner on a Gitlab
instance as discussed in
https://github.com/voxpupuli/puppet-gitlab_ci_runner/issues/18.
The registration can be done with Bolt task provide in
https://github.com/voxpupuli/puppet-gitlab_ci_runner/pull/73.

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,9 +1,12 @@
 fixtures:
   repositories:
-    apt: "https://github.com/puppetlabs/puppetlabs-apt.git"
-    docker: "https://github.com/puppetlabs/puppetlabs-docker.git"
-    concat: "https://github.com/puppetlabs/puppetlabs-concat.git"
-    stdlib: "https://github.com/puppetlabs/puppetlabs-stdlib.git"
+    apt: https://github.com/puppetlabs/puppetlabs-apt.git
+    concat:
+      repo: https://github.com/syseleven/puppetlabs-concat.git
+      branch: deferred-function
+    docker: https://github.com/puppetlabs/puppetlabs-docker.git
+    stdlib: https://github.com/puppetlabs/puppetlabs-stdlib.git
+    translate: https://github.com/puppetlabs/puppetlabs-translate.git
     yumrepo_core:
       repo: https://github.com/puppetlabs/puppetlabs-yumrepo_core.git
       puppet_version: ">= 6.0.0"
