--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -2,7 +2,9 @@ fixtures:
   repositories:
     apt: "https://github.com/puppetlabs/puppetlabs-apt.git"
     docker: "https://github.com/puppetlabs/puppetlabs-docker.git"
-    concat: "https://github.com/puppetlabs/puppetlabs-concat.git"
+    concat:
+      repo: https://github.com/syseleven/puppetlabs-concat.git
+      branch: deferred-function
     stdlib: "https://github.com/puppetlabs/puppetlabs-stdlib.git"
     yumrepo_core:
       repo: https://github.com/puppetlabs/puppetlabs-yumrepo_core.git
