--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        setfile: ubuntu1804-64{hostname=ubuntu1804-64.example.com}
+        setfile: 'ubuntu1804-64{hostname=ubuntu1804-64.example.com}'
         puppet: puppet6
     name: Puppet 6 - Ubuntu 18.04
     services:
