--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on: pull_request
 
 jobs:
   acceptance:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     env:
       BUNDLE_WITHOUT: development:test:release
     strategy:
